--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ iterfzf = "^0.5.0"
 requests = "^2.28.1"
 typer = "^0.6.1"
 rich = "^12.5.1"
+appdirs = "^1.4.4"
 
 [tool.poetry.dev-dependencies]
 types-requests = "^2.28.7"
