--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,13 @@ requests = "^2.28.1"
 typer = "^0.6.1"
 rich = "^12.5.1"
 appdirs = "^1.4.4"
+pydantic = "^1.9.2"
 
 [tool.poetry.dev-dependencies]
 types-requests = "^2.28.7"
 flake8 = "^5.0.3"
 mypy = "^0.971"
+qenerate = "^0.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
