--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,4 +29,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-ocl = 'ocl.__main__:typer_run'
+ocl = 'ocl.__main__:app'
