--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ typer = "^0.6.1"
 rich = "^12.5.1"
 appdirs = "^1.4.4"
 pydantic = "^1.9.2"
+"flufl.lock" = "^7.1.1"
 
 [tool.poetry.dev-dependencies]
 types-requests = "^2.28.7"
