--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ flake8 = "^5.0.3"
 mypy = "^0.971"
 qenerate = "^0.1.2"
 
+[tool.poetry.group.dev.dependencies]
+reorder-python-imports = "^3.9.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
