--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ appdirs = "^1.4.4"
 pydantic = "^1.9.2"
 "flufl.lock" = "^7.1.1"
 diskcache = "^5.4.0"
+playwright = "^1.28.0"
 
 [tool.poetry.dev-dependencies]
 types-requests = "^2.28.7"
@@ -28,6 +29,7 @@ qenerate = "^0.1.2"
 
 [tool.poetry.group.dev.dependencies]
 reorder-python-imports = "^3.9.0"
+isort = "^5.11.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -35,3 +37,14 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 ocl = 'ocl.__main__:app'
+
+[tool.black]
+line-length = 88
+target-version = ['py311']
+include = '^.*\.py$'
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+force_grid_wrap = 2
+float_to_top = true
