--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ packages = [{ include = "ocl" }]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-selenium = "^4.3.0"
 iterfzf = "^0.5.0"
 requests = "^2.28.1"
 typer = "^0.6.1"
@@ -19,7 +18,8 @@ appdirs = "^1.4.4"
 pydantic = "^1.9.2"
 "flufl.lock" = "^7.1.1"
 diskcache = "^5.4.0"
-playwright = "^1.28.0"
+requests-kerberos = "^0.14.0"
+pyquery = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 types-requests = "^2.28.7"
