--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,15 +21,13 @@ diskcache = "^5.4.0"
 requests-kerberos = "^0.14.0"
 pyquery = "^2.0.0"
 
-[tool.poetry.dev-dependencies]
-types-requests = "^2.28.7"
-flake8 = "^5.0.3"
-mypy = "^0.971"
-qenerate = "^0.1.2"
 
 [tool.poetry.group.dev.dependencies]
-reorder-python-imports = "^3.9.0"
-isort = "^5.11.3"
+types-requests = "^2.28.7"
+pyjwt = "^2.8.0"
+ruff = "^0.1.11"
+mypy = "^1.8.0"
+qenerate = "^0.6.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -38,13 +36,41 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 ocl = 'ocl.__main__:app'
 
-[tool.black]
+[tool.ruff]
 line-length = 88
-target-version = ['py311']
-include = '^.*\.py$'
+target-version = 'py311'
+required-version = "0.1.11"
 
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-force_grid_wrap = 2
-float_to_top = true
+src = ["ocl"]
+extend-exclude = ["ocl/gql_definitions"]
+fix = true
+
+[tool.ruff.lint]
+preview = true
+
+# defaults are ["E4", "E7", "E9", "F"]
+extend-select = [
+    # flake8 default rules
+    "E1", # preview rule
+    "E2", # preview rule
+    "W",
+    # isort
+    "I",
+    # pylint
+    "PL",
+]
+ignore = [
+    "PLR0913", # Too many arguments
+    "PLR0917", # Too many positional arguments
+]
+[tool.ruff.format]
+preview = true
+
+[tool.ruff.lint.isort]
+known-first-party = ["ocl"]
+
+[[tool.mypy.overrides]]
+# Below are all of the packages that don't implement stub packages. Mypy will throw an error if we don't ignore the
+# missing imports. See: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
+module = ["appdirs.*", "diskcache.*", "pyquery.*", "requests_kerberos.*"]
+ignore_missing_imports = true
