--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,13 @@ diskcache = "^5.4.0"
 requests-kerberos = "^0.14.0"
 pyquery = "^2.0.0"
 
-
 [tool.poetry.group.dev.dependencies]
 types-requests = "^2.28.7"
 pyjwt = "^2.8.0"
 ruff = "^0.1.11"
 mypy = "^1.8.0"
 qenerate = "^0.6.3"
+setuptools = "^69.0.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
