:arrow_up: upgrade some dependencies and fix minor linter errors

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,7 +26,7 @@ jobs:
           POETRY_HTTP_BASIC_PYPI_USERNAME: __token__
           POETRY_HTTP_BASIC_PYPI_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
-          poetry publish --build
+          poetry publish --build --skip-existing
 
       - uses: actions/upload-artifact@v3
         with:
