--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,17 +34,20 @@ dev-dependencies = [
     "setuptools>=73.0.1",
 ]
 
+[project.scripts]
+ocl = 'openshift_cluster_login.__main__:app'
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[project.scripts]
-ocl = 'openshift_cluster_login.__main__:app'
+[tool.hatch.build.targets.sdist]
+only-include = ["openshift_cluster_login"]
 
 [tool.ruff]
 line-length = 88
 target-version = 'py311'
-required-version = "0.6.2"
+required-version = "0.6.9"
 src = ["openshift_cluster_login"]
 extend-exclude = ["openshift_cluster_login/gql_definitions"]
 fix = true
