--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ jobs:
           python-version-file: "pyproject.toml"
 
       - name: Build
-        run: uv build
+        run: uv build --sdist --wheel
 
       - name: Publish to PyPI
         env:
