--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "openshift-cluster-login"
-version = "1.2.0"
+version = "1.2.1"
 description = "Openshift cluster login on command line"
 authors = [{ name = "Christian Assing", email = "chris@ca-net.org" }]
 license = { text = "MIT License" }
@@ -18,7 +18,21 @@ dependencies = [
     "pyquery>=2.0.0",
     "appdirs>=1.4.4",
 ]
-
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Environment :: Console",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: MacOS :: MacOS X",
+    "Operating System :: POSIX :: Linux",
+    "Topic :: Software Development :: Build Tools",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: System :: System Shells",
+    "Topic :: System :: Systems Administration",
+    "Topic :: Terminals :: Terminal Emulators/X Terminals",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+]
 [project.urls]
 homepage = "http://github.com/chassing/ocl"
 respository = "http://github.com/chassing/ocl"
@@ -34,17 +48,20 @@ dev-dependencies = [
     "setuptools>=73.0.1",
 ]
 
+[project.scripts]
+ocl = 'openshift_cluster_login.__main__:app'
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[project.scripts]
-ocl = 'openshift_cluster_login.__main__:app'
+[tool.hatch.build.targets.sdist]
+only-include = ["openshift_cluster_login"]
 
 [tool.ruff]
 line-length = 88
 target-version = 'py311'
-required-version = "0.6.2"
+required-version = "0.6.9"
 src = ["openshift_cluster_login"]
 extend-exclude = ["openshift_cluster_login/gql_definitions"]
 fix = true
