--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,18 @@ license = { text = "MIT License" }
 readme = "README.md"
 requires-python = ">= 3.11"
 dependencies = [
-    "iterfzf>=1.4.0.54.3",
-    "requests>=2.32.3",
-    "typer>=0.12.5",
-    "rich>=13.7.1",
-    "pydantic>=2.8.2",
-    "flufl-lock>=8.1.0",
-    "diskcache>=5.6.3",
-    "requests-kerberos>=0.15.0",
-    "pyquery>=2.0.0",
     "appdirs>=1.4.4",
+    # https://github.com/fastapi/typer/pull/1145
+    "click==8.1.0",
+    "diskcache>=5.6.3",
+    "flufl-lock>=8.1.0",
+    "iterfzf>=1.4.0.54.3",
+    "pydantic>=2.8.2",
+    "pyquery>=2.0.0",
+    "requests-kerberos>=0.15.0",
+    "requests>=2.32.3",
+    "rich>=13.7.1",
+    "typer>=0.12.5",
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
