--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "openshift-cluster-login"
-version = "1.2.2"
+version = "1.3.0"
 description = "Openshift cluster login on command line"
 authors = [{ name = "Christian Assing", email = "chris@ca-net.org" }]
 license = { text = "MIT License" }
@@ -10,12 +10,13 @@ dependencies = [
     "appdirs>=1.4.4",
     "diskcache>=5.6.3",
     "flufl-lock>=8.1.0",
-    "iterfzf>=1.4.0.54.3",
+    "fuzzyfinder>=2.3.0",
     "pydantic>=2.8.2",
     "pyquery>=2.0.0",
     "requests-kerberos>=0.15.0",
     "requests>=2.32.3",
     "rich>=13.7.1",
+    "textual>=5.3.0",
     "typer>=0.12.5",
 ]
 classifiers = [
@@ -38,14 +39,15 @@ homepage = "http://github.com/chassing/ocl"
 respository = "http://github.com/chassing/ocl"
 issues = "http://github.com/chassing/ocl/issues"
 
-[tool.uv]
-dev-dependencies = [
-    "types-requests",
-    "pyjwt",
-    "ruff",
+[dependency-groups]
+dev = [
     "mypy",
+    "pyjwt",
     "qenerate",
+    "ruff",
     "setuptools>=73.0.1",
+    "textual-dev>=1.7.0",
+    "types-requests",
 ]
 
 [project.scripts]
@@ -56,6 +58,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.sdist]
+only-include = ["openshift_cluster_login"]
+
+[tool.hatch.build.targets.wheel]
 only-include = ["openshift_cluster_login"]
 
 [tool.ruff]
@@ -134,6 +139,7 @@ disallow_incomplete_defs = true
 module = [
     "appdirs.*",
     "diskcache.*",
+    "fuzzyfinder.*",
     "pyquery.*",
     "requests_kerberos.*",
     "iterfzf.*",
